package models

type Session struct {
	SessionID string
	QuizGame  *QuizGame
}
