package models

type User struct {
	UserID       string
	Login        string
	SessionID    string
	InstanceName string
}
